change my developer section

--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,8 @@
         <developer>
             <id>tchemit</id>
             <name>Tony Chemit</name>
-            <email>chemit at codelutin dot com</email>
-            <url>http://www.debux.org</url>
+            <email>chemit@codelutin.com</email>
+            <url>http://www.codelutin.com</url>
             <organization>Code Lutin</organization>
             <organizationUrl>http://www.codelutin.com</organizationUrl>
             <roles>
